--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,24 +59,26 @@
   <audio data-key="KeyL" src="sounds/tink.wav"></audio>
 
 <script>
-
+  
   function playSound(e) {
     const audio = document.querySelector(`audio[data-key="${e.code}"]`);
     const key = document.querySelector(`.key[data-key="${e.code}"]`);
     if (!audio) return; // stop the function from running all together
+    
     audio.currentTime = 0; // rewind to the start
     audio.play();
     key.classList.add('playing');
   }
-  
-  function removeTransition(e) {
-    if (e.propertyName !== 'transform') return; // skip it if it's not a transform
-    this.classList.remove('playing');
+
+  function stopSound(e) {
+    const key = document.querySelector(`.key[data-key="${e.code}"]`);
+    if (!key) return; // stop function from error if no keypress
+
+    key.classList.remove('playing');
   }
   
-  const keys = document.querySelector('.key');
-  keys.forEach(key => key.addEventListener('transitioned', removeTransition));
   window.addEventListener('keydown', playSound);
+  window.addEventListener('keyup', stopSound);
 
 </script>
 
